added additional configuration options

--- a/pi/config.json
+++ b/pi/config.json
@@ -1,8 +1,15 @@
 {
+    "goal": "debug",
     "driver": {
         "type": "boat_driver",
         "kwargs": {
-            "port": "COM4"
+            "arduino_port": "COM4"
+        }
+    },
+    "helmsman": {
+        "rudder_controller": {
+            "enabled": false,
+            "type": "pid"
         }
     }
 }
