sail_controller created. controllers for sail and rudder can be toggled through server endpoint

--- a/pi/config.json
+++ b/pi/config.json
@@ -1,7 +1,7 @@
 {
     "goal": "run",
     "driver": {
-        "type": "boat_driver",
+        "type": "test_driver",
         "kwargs": {
             "arduino_port": "COM4"
         }
@@ -9,8 +9,12 @@
     "helmsman": {
         "kwargs": {
             "rudder_controller": {
-                "enabled": false,
+                "enabled": true,
                 "type": "pid"
+            },
+            "sail_controller": {
+                "enabled": true,
+                "interval": 3
             }
         }
     },
