--- a/pi/config.json
+++ b/pi/config.json
@@ -9,8 +9,9 @@
     "helmsman": {
         "kwargs": {
             "rudder_controller": {
-                "enabled": false,
-                "type": "pid"
+                "enabled": true,
+                "type": "pid",
+                "interval": 2
             },
             "sail_controller": {
                 "enabled": true,
