--- a/configs/config.json
+++ b/configs/config.json
@@ -1,5 +1,5 @@
 {
-    "goal": "run",
+    "goal": "simulate",
     "driver": {
         "type": "boat_driver",
         "kwargs": {
@@ -24,5 +24,9 @@
         "kwargs":{
 
         }
+    },
+    "simulation":{
+        "display": true,
+        "run": true
     }
 }
